--- a/docker/master/Dockerfile
+++ b/docker/master/Dockerfile
@@ -12,10 +12,12 @@ RUN gpasswd -a jenkins docker
 # Add default Jenkins plugins/configuration
 USER jenkins
 
-RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow yet-another-docker-plugin
+RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow blueocean
 
 # Skip initial setup
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 
 COPY executors.groovy /usr/share/jenkins/ref/init.groovy.d/
 COPY default-user.groovy /usr/share/jenkins/ref/init.groovy.d/
+
+VOLUME /var/jenkins_home
