--- a/docker-images/master/Dockerfile
+++ b/docker-images/master/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkinsci/jenkins:2.23
+FROM jenkins:2.7.4
 
 RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow blueocean credentials-binding
 
