Add support for JENKINS_USER and JENKINS_PASSWORD env vars
Customize login credentials of the Jenkins master at initial startup

--- a/docker-images/master/Dockerfile
+++ b/docker-images/master/Dockerfile
@@ -2,6 +2,9 @@ FROM jenkinsci/jenkins:2.23
 
 RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow blueocean
 
+ENV JENKINS_USER admin
+ENV JENKINS_PASSWORD admin
+
 # Skip initial setup
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 
