--- a/docker-images/master/Dockerfile
+++ b/docker-images/master/Dockerfile
@@ -1,6 +1,6 @@
 FROM jenkinsci/jenkins:2.23
 
-RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow blueocean
+RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow blueocean credentials-binding
 
 ENV JENKINS_USER admin
 ENV JENKINS_PASSWORD admin
