Fix wrong environment variable for JENKINS_URL

--- a/docker-images/slave/Dockerfile
+++ b/docker-images/slave/Dockerfile
@@ -16,7 +16,7 @@ ADD slave.py /var/lib/jenkins/slave.py
 
 WORKDIR /home/jenkins
 
-ENV JENKINS_HTTP_URL "http://jenkins"
+ENV JENKINS_URL "http://jenkins"
 ENV JENKINS_SLAVE_ADDRESS ""
 ENV JENKINS_USER "admin"
 ENV JENKINS_PASS "admin"
