Fix wrong environment variable for admin password
Used "JENKINS_PASSWORD" instead if "JENKINS_PASS" for the default password.
This causes no login possibility when not supplying a password via environemnt variables.
Update README to reflect the JENKINS_PASS env var

--- a/docker-images/master/Dockerfile
+++ b/docker-images/master/Dockerfile
@@ -3,7 +3,7 @@ FROM jenkinsci/jenkins:2.23
 RUN /usr/local/bin/install-plugins.sh git matrix-auth workflow-aggregator docker-workflow blueocean credentials-binding
 
 ENV JENKINS_USER admin
-ENV JENKINS_PASSWORD admin
+ENV JENKINS_PASS admin
 
 # Skip initial setup
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
