Documentation for SLAVE_WEBSOCKET environment variable

--- a/docker-images/slave/Dockerfile
+++ b/docker-images/slave/Dockerfile
@@ -25,6 +25,7 @@ ENV SLAVE_SECRET ""
 ENV SLAVE_EXECUTORS "1"
 ENV SLAVE_LABELS "docker"
 ENV SLAVE_WORING_DIR ""
+ENV SLAVE_WEBSOCKET="false"
 ENV CLEAN_WORKING_DIR "true"
 
 CMD [ "python", "-u", "/var/lib/jenkins/slave.py" ]
